# langchain-mongodb

.github/workflows/: test_mongod.yml
libs/langchain-mongodb/: CHANGELOG.md
libs/langchain-mongodb/langchain_mongodb/graphrag/: graph.py
libs/langchain-mongodb/langchain_mongodb/retrievers/: hybrid_search.py  parent_document.py
libs/langchain-mongodb/tests/integration_tests/: test_parent_document.py
libs/mongodb/langchain_mongodb/retrievers/: parent_document.py
sandbox/auto-embedding/: pyproject.toml
sandbox/auto-embedding/autoembedding_sandbox/: demo.py
