
[build-system]
requires = ["hatchling>1.24"]
build-backend = "hatchling.build"

[project]
name = "autoembedding-sandbox"
version = "0.0.1"
description = "Sandbox"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.6.1",
    "pymongo-search-utils>=0.1.0",
    "langchain-voyageai",
]

[dependency-groups]
dev = [
#    "langchain>=1.0",
    "langchain-core>=1.0",
    "pytest>=7.3.0",
    "pip>=25.0.1",
]

[tool.pytest.ini_options]
minversion = "7"
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
log_cli_level = "INFO"
faulthandler_timeout = 1500
xfail_strict = true
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
    "viz: marks tests as requiring optional-dependency group `viz`",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    # Ignore ResourceWarning raised by langchain standardized base classes.
    "ignore:unclosed <socket.socket:ResourceWarning",
]

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def", "no-untyped-call", "var-annotated"]

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "I",  # isort
]
lint.ignore = ["E501", "B008", "UP007", "UP006", "UP035", "UP045"]

[tool.coverage.run]
omit = ["tests/*"]
